# models/order_info.go
@@ -1,0 +1,80 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// OrderInfo order info
+// swagger:model OrderInfo
+type OrderInfo struct {
+
+	// email
+	Email string `json:"email,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// phone number
+	PhoneNumber string `json:"phone_number,omitempty"`
+
+	// shipping address
+	ShippingAddress *ShippingAddress `json:"shipping_address,omitempty"`
+}
+
+// Validate validates this order info
+func (m *OrderInfo) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateShippingAddress(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *OrderInfo) validateShippingAddress(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.ShippingAddress) { // not required
+		return nil
+	}
+
+	if m.ShippingAddress != nil {
+
+		if err := m.ShippingAddress.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("shipping_address")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *OrderInfo) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *OrderInfo) UnmarshalBinary(b []byte) error {
+	var res OrderInfo
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
