# models/shipping_address.go
@@ -1,0 +1,62 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// ShippingAddress shipping address
+// swagger:model ShippingAddress
+type ShippingAddress struct {
+
+	// city
+	City string `json:"city,omitempty"`
+
+	// country code
+	CountryCode string `json:"country_code,omitempty"`
+
+	// post code
+	PostCode string `json:"post_code,omitempty"`
+
+	// stat
+	Stat string `json:"stat,omitempty"`
+
+	// street line1
+	StreetLine1 string `json:"street_line1,omitempty"`
+
+	// street line2
+	StreetLine2 string `json:"street_line2,omitempty"`
+}
+
+// Validate validates this shipping address
+func (m *ShippingAddress) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ShippingAddress) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ShippingAddress) UnmarshalBinary(b []byte) error {
+	var res ShippingAddress
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
