# models/shipping_query.go
@@ -1,0 +1,104 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// ShippingQuery shipping query
+// swagger:model ShippingQuery
+type ShippingQuery struct {
+
+	// from
+	From *User `json:"from,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// invoice payload
+	InvoicePayload string `json:"invoice_payload,omitempty"`
+
+	// shipping address
+	ShippingAddress *ShippingAddress `json:"shipping_address,omitempty"`
+}
+
+// Validate validates this shipping query
+func (m *ShippingQuery) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateFrom(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateShippingAddress(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ShippingQuery) validateFrom(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.From) { // not required
+		return nil
+	}
+
+	if m.From != nil {
+
+		if err := m.From.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("from")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *ShippingQuery) validateShippingAddress(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.ShippingAddress) { // not required
+		return nil
+	}
+
+	if m.ShippingAddress != nil {
+
+		if err := m.ShippingAddress.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("shipping_address")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ShippingQuery) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ShippingQuery) UnmarshalBinary(b []byte) error {
+	var res ShippingQuery
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
